--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -18,6 +18,7 @@
         android:background="@drawable/btn_guide_selector"
         android:padding="5dp"
         android:text="开始体验"
+        android:visibility="invisible"
         android:textColor="@drawable/btn_guide_text_selector" />
 
 
